[project]
name = "europa1400-network-bridge"
version = "0.0.0"
description = "Europa1400 Network Bridge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
]
license = { file = "LICENSE" }

[dependency-groups]
build = [
    "pyinstaller>=6.13.0",
]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
]
